--- a/charts/kubeflow/values.yaml
+++ b/charts/kubeflow/values.yaml
@@ -1592,60 +1592,21 @@ auth:
   userIdPrefix: ""
 
 clusterDomain: cluster.local
-# apiVersion: v1
-# data:
-#   ConMaxLifeTime: 120s
-#   DEFAULT_CACHE_STALENESS: ""
-#   MAXIMUM_CACHE_STALENESS: ""
-#   appName: pipeline
-#   appVersion: 2.0.1
-#   autoUpdatePipelineDefaultVersion: "true"
-#   bucketName: mlpipeline
-#   cacheDb: cachedb
-#   cacheImage: gcr.io/google-containers/busybox
-#   cacheNodeRestrictions: "false"
-#   cronScheduleTimezone: UTC
-#   dbHost: mysql
-#   dbPort: "3306"
-#   defaultPipelineRoot: ""
-#   mlmdDb: metadb
-#   pipelineDb: mlpipeline
-#   warning: |
-#     1. Do not use kubectl to edit this configmap, because some values are used
-#     during kustomize build. Instead, change the configmap and apply the entire
-#     kustomize manifests again.
-#     2. After updating the configmap, some deployments may need to be restarted
-#     until the changes take effect. A quick way to restart all deployments in a
-#     namespace: `kubectl rollout restart deployment -n <your-namespace>`.
-# kind: ConfigMap
-# metadata:
-#   labels:
-#     app.kubernetes.io/component: ml-pipeline
-#     app.kubernetes.io/name: kubeflow-pipelines
-#     application-crd-id: kubeflow-pipelines
-#   name: pipeline-install-config
-#   namespace: kubeflow
 
 knativeIntegration:
-  # Version default
-  # version: &defaultVersion "1.10.2"
-  defaultVersion: "1.10.2"
   enabled: true
-  # Serving config
   knativeServing:
-    enabled: true  # in templates/knative-integration/operator.knative.serving.yaml check with function for both enabled options
+    enabled: true
     name: knative-serving
     namespace: knative-serving
     operatorSpec:
-      # version: *defaultVersion
       version: 1.10.2
       ingress:
         istio:
           enabled: true
           knative-ingress-gateway:
             selector:
-              # istio: ingressgateway
-              istio: cluster-local-gateway
+              istio: ingressgateway
             servers:
               - port:
                   number: 80
@@ -1664,10 +1625,6 @@ knativeIntegration:
                 hosts:
                 - "*"
       config:
-        # Note: The configuration options may be copied out of
-        # the example blocks, found in each of the supported KNative ConfigMaps.
-        # For more information, visit official knative operator documentation:
-        # https://knative.dev/docs/install/operator/configuring-with-operator/
         istio:
           gateway.knative-serving.knative-ingress-gateway: "istio-ingressgateway.istio-ingress.svc.cluster.local"
           local-gateway.knative-serving.knative-local-gateway: "cluster-local-gateway.istio-ingress.svc.cluster.local"
@@ -1680,25 +1637,17 @@ knativeIntegration:
             - name: knative-local-gateway
               namespace: knative-serving
               service: cluster-local-gateway.istio-ingress.svc.cluster.local
-        autoscaler: {}
-        defaults: {}
-        deployment: {}
         domain: {}
           # example.com: ""
-        features: {}
-        gc: {}
-        leader: {}
-        logging: {}
-        network: {}
-        observability: {}
-        tracing: {}
 
 
   # Eventing config
   knativeEventing:
-    version: "1.10.2"
-    namespace: knative-eventing
     enabled: false
+    name: knative-eventing
+    namespace: knative-eventing
+    operatorSpec:
+      version: 1.10.2
 
   # Istio integration configuration
   istioIntegration:
