--- a/example/helm/app.knative-operator.yaml
+++ b/example/helm/app.knative-operator.yaml
@@ -10,13 +10,14 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: knative
+    namespace: knative-operator
   project: default
   sources:
     - repoURL: https://github.com/knative/operator
       targetRevision: knative-v1.11.0
       path: config/default
       kustomize:
+        namespace: knative-operator
         images:
           - "ko://knative.dev/operator/cmd/operator=gcr.io/knative-releases/knative.dev/operator/cmd/operator@sha256:0a3b5b4e84b8a97fc18826db74f4c3e615b8543a35e85d75c9fd2e8549286c23"
           - "ko://knative.dev/operator/cmd/webhook=gcr.io/knative-releases/knative.dev/operator/cmd/webhook@sha256:be644ea95ffde47bb36131408c3ba6302bb4d59d1e3578d212affcd340275e00"
